Made demonstration more realistic